--- a/index.htm
+++ b/index.htm
@@ -53,7 +53,7 @@
                     <a class="nav-link link text-success display-4" href="https://mobirise.com">Welcome</a>
                 </li></ul>
             
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-success display-4" href="https://mobirise.com">
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-success display-4" href="#bottom">
                   Get in Touch
                 </a></div>
       </div>
